packages/edxml-test-corpus/edxml_test_corpus-3.0.0.dev2-py3-none-any.whl/edxml_test_corpus/tests/invalid/ontology/upgrade-conflict-source.edxml
<?xml version="1.0" encoding="UTF-8"?>
<!--
Test if conflicting source definitions are rejected.
-->
<edxml xmlns="http://edxml.org/edxml" version="3.0.0">
  <ontology>
    <objecttypes/>
    <concepts/>
    <eventtypes/>
    <sources>
      <source uri="/a/" description="a" date-acquired="20190101" version="1"/>
    </sources>
  </ontology>
  <ontology>
    <objecttypes/>
    <concepts/>
    <eventtypes/>
    <sources>
      <!-- Description changed, version did not -->
      <source uri="/a/" description="changed" date-acquired="20190101" version="1"/>
    </sources>
  </ontology>
</edxml>
